shows whose turn it is

--- a/lobby.html
+++ b/lobby.html
@@ -9,6 +9,7 @@
 
   <div id='header'>
     <h3 id='game-state'><h3>
+    <p id='turn-indicator'></p>
     <form id='name-picker' class='hidden'>
       name: <input id='player-name' type='text'>
       <button id='name-submit' action='submit'>submit</button>
